--- a/index.html
+++ b/index.html
@@ -85,7 +85,10 @@
         </div>
         <div class="vedio" >
             <img src="back/outline 1.png">
-            <video autoplay muted loop><source src="back/sheepanima.mp4" type="video/mp4"></video>
+            <video autoplay muted loop>
+                <source src="back/sheepanima.mp4" type="video/mp4">
+                <source src="back/sheepogg.mp4" type="video/ogg">
+            </video>
         </div>
     </div>
     <div class="path">
