--- a/about.html
+++ b/about.html
@@ -164,10 +164,10 @@
     <div class="cloudtitle" id="story"><h2>牧場的一天</h2></div>
     <div class="story" id="story">
         <div class="time">
-            <button><img src="story\feed.png" alt=""><p>餵食時間</p></button>
-            <button><img src="story\milk.png" alt=""><p>擠奶時間</p></button>
-            <button><img src="story\clean.png" alt=""><p>打掃時間</p></button>
-            <button><img src="story\sunset.png" alt=""><p>回家時間</p></button>
+            <span><img src="story\feed.png" alt=""><p>餵食時間</p></span>
+            <span><img src="story\milk.png" alt=""><p>擠奶時間</p></span>
+            <span><img src="story\clean.png" alt=""><p>打掃時間</p></span>
+            <span><img src="story\sunset.png" alt=""><p>回家時間</p></span>
         </div>
         <div class="window">
             <div class="page" id="feed">
