--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <img src="back/outline 1.png">
             <video autoplay muted loop>
                 <source src="back/sheepanima.mp4" type="video/mp4">
-                <source src="back/sheepogg.mp4" type="video/ogg">
+                <source src="back/sheepogg.ogg" type="video/ogg">
             </video>
         </div>
     </div>
