--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </div>
         <div class="vedio" >
             <img src="back/outline 1.png">
-            <video autoplay muted loop>
+            <video autoplay muted loop playsInline>
                 <source src="back/sheepanima.mp4" type="video/mp4">
                 <source src="back/sheepogg.ogg" type="video/ogg">
             </video>
