--- a/index.html
+++ b/index.html
@@ -235,9 +235,9 @@
         <label for="bot">客服羊羊</label>
         <div class="talk">
             <div class="header">客服羊羊</div>
-            <div class="info">
-            </div>
+            <div class="info"></div>
             <input type="text">
+            <i class="fa-solid fa-paper-plane"></i>
         </div>
     </div>
     <footer>
@@ -256,8 +256,8 @@
                 <li><a href="#"><i class="fa-brands fa-square-youtube"></i></a></li>
                 <a href=""><h3>客服信箱</h3><i class="fa-solid fa-envelope"></i></a>
             </div>
-            <div class="totop">
-                <a href="#header">TOP</a>
+            <div class="totop" id="totop">
+                <a href="#header"  >TOP</a>
             </div>
         </div>
         <p>本網站為緯育TibaMe【第85期】前端工程師專業技術養成班學員作品,僅供學習、展示之用途。</p>
