--- a/new.html
+++ b/new.html
@@ -73,7 +73,8 @@
             </select>
         </form>
         <ul>
-            <li><p class="s">公告時間</p><p class="s">類別</p><p class="m">標題</p><p class="ss">觀看數</p></li>
+            <li>
+                <p class="s">公告時間</p><p class="s">類別</p><p class="m">標題</p><p class="ss">觀看數</p></li>
             <li>
                 <a href="">
                     <p class="date">2023.01.08</p>
@@ -133,7 +134,7 @@
                 <li><a href="#"><i class="fa-brands fa-square-youtube"></i></a></li>
                 <a href=""><h3>客服信箱</h3><i class="fa-solid fa-envelope"></i></a>
             </div>
-            <div class="totop">
+            <div class="totop" id="totop">
                 <a href="#header">TOP</a>
             </div>
         </div>
