--- a/shop.html
+++ b/shop.html
@@ -139,7 +139,7 @@
                     <li><a href="#"><i class="fa-brands fa-square-youtube"></i></a></li>
                     <a href=""><h3>客服信箱</h3><i class="fa-solid fa-envelope"></i></a>
                 </div>
-                <div class="totop">
+                <div class="totop" id="totop">
                     <a href="#header">TOP</a>
                 </div>
             </div>
