--- a/about.html
+++ b/about.html
@@ -244,7 +244,7 @@
                 <span class="chattime" id="opentime"></span>
             </div>
             </div>
-            <input type="text" id="textbox">
+            <input type="text" id="textbox" placeholder="請輸入關鍵字...">
             <i class="fa-solid fa-paper-plane" id="send"></i>
         </div>
     </div>
