--- a/detail.html
+++ b/detail.html
@@ -99,7 +99,7 @@
                     <p>數量</p>
                     <button id="minus">
                     <i class="fa-solid fa-minus"></i></button>
-                    <input type="number" value="1" id="num">
+                    <input type="text" value="1" id="num">
                     <button id="plus">
                     <i class="fa-solid fa-plus"></i></button>
                 </div>
