--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <li ><a href="new.html">最新消息</a></li>
             <li ><a href="about.html">園區介紹</a></li>
             <li ><a href="activity.html">牧場體驗</a></li>
-            <li ><a href="shop.html">小農產品</a></li>
+            <li ><a href="QA.html">常見問題</a></li>
         </ul>
         <div class="para">
             <img src="back\cloudl.png" id="cl" alt="">
