--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
             <li class="list"><a href="shop.html">小農產品</a>
                 <ul>
                     <li><a href="milkshop.html">純乳系列</a></li>
-                    <li><a href="">常溫點心</a></li>
-                    <li><a href="">文創商品</a></li>
-                    <li><a href="">全部商品</a></li>
+                    <li><a href="milkshop.html">常溫點心</a></li>
+                    <li><a href="milkshop.html">文創商品</a></li>
+                    <li><a href="milkshop.html">全部商品</a></li>
                 </ul>
             </li>
             <li class="list"><a href="QA.html">常見問題</a></li>
@@ -104,17 +104,17 @@
     <main>
         <div class="sum">
             <div class="item">
-                <a href="">
+                <a href="about.html">
                     <p><s>園區</s>導覽</p>
                     <span><img src="activity/4849375_s.jpg"></span>
                 </a>
             </div>
             <div class="item">
-                <a href=""><p><s>牧場</s>體驗</p>
+                <a href="activity.html"><p><s>牧場</s>體驗</p>
                 <span><img src="activity/26040835_m.jpg"></span></a>
             </div>
             <div class="item">
-                <a href=""><p><s>小農</s>產品</p>
+                <a href="shop.html"><p><s>小農</s>產品</p>
                     <span><img src="p/shopbar.jpg"></span></a>
             </div>
         </div>
@@ -162,14 +162,14 @@
             <div class="cloudtitle"><h2>牧場體驗</h2></div>
             <div class="act">
                 <div class="card">
-                     <a href=""><img src="activity\25115618_s.jpg"><h3>動物互動</h3></a>
+                     <a href="activity.html#allact"><img src="activity\25115618_s.jpg"><h3>動物互動</h3></a>
                 </div>
                 <div class="card">
-                    <a href=""><img src="bar\cartbar.jpg">
+                    <a href="activity.html#actblock"><img src="bar\cartbar.jpg">
                     <h3>手作工坊</h3></a>
                 </div>
                 <div class="card">
-                    <a href=""><img src="ready\a3.jpg">
+                    <a href="activity.html#bbq"><img src="ready\a3.jpg">
                     <h3>烤肉方案</h3></a>
                 </div>
             </div>
@@ -181,7 +181,7 @@
         <div class="shop" >
             <div class="sum">
                 <div class="item">
-                    <a href=""><p>純乳<s>系列</s></p>
+                    <a href="milkshop.html"><p>純乳<s>系列</s></p>
                     <span><img src="p/shopbar.jpg"></span></a>
                 </div>
                 <div class="item">
