--- a/activity.html
+++ b/activity.html
@@ -71,7 +71,7 @@
         </div>
         <div class="pagebar">
             <img src="bar\actbar.jpg" alt="activity">
-            <h1 class="pagetitle">農場體驗</h1>
+            <h1 class="pagetitle">牧場體驗</h1>
         </div>
         <div class="pic">
             <div class="content">
