--- a/detail.html
+++ b/detail.html
@@ -65,7 +65,7 @@
     </div>
     <section>
         <div class="breadcrumb">
-            <a href="shop.html">小農產品</a>/<a href="milkshop.html">純乳系列</a>/<a href="detail.html">山羊奶(500ml)</a>
+            <a href="shop.html">小農產品</a>/<a href="milkshop.html">純乳系列</a>/<a style="pointer-events: none;">山羊奶(500ml)</a>
         </div>
         <div class="info">
             <div class="pic">
