--- a/about.html
+++ b/about.html
@@ -270,9 +270,9 @@
         </div>
         <p>本網站為緯育TibaMe【第85期】前端工程師專業技術養成班學員作品,僅供學習、展示之用途。</p>
     </footer>
-    <script src="js/common.js" defer="defer"></script>
-    <script src="js/about.js" defer="defer"></script>
-    <script src="js/nav.js" defer="defer"></script>
+    <script src="js/common.js"></script>
+    <script src="js/about.js"></script>
+    <script src="js/nav.js"></script>
     <script>
         const icona = document.getElementById('icona');
 const icon = document.getElementById('icon')
