--- a/detail.html
+++ b/detail.html
@@ -178,9 +178,9 @@
         </div>
         <p>本網站為緯育TibaMe【第85期】前端工程師專業技術養成班學員作品,僅供學習、展示之用途。</p>
     </footer>
-    <script src="js/common.js" defer="defer"></script>
-    <script src="js/shopslide.js" defer="defer"></script>
-    <script src="js/nav.js" defer="defer"></script>
+    <script src="js/common.js"></script>
+    <script src="js/shopslide.js"></script>
+    <script src="js/nav.js"></script>
     <script>
     function showLarge(e){
     document.getElementById("mainimg").src = e.target.src;
