--- a/activity.html
+++ b/activity.html
@@ -303,8 +303,8 @@
         </div>
         <p>本網站為緯育TibaMe【第85期】前端工程師專業技術養成班學員作品,僅供學習、展示之用途。</p>
     </footer>
-    <script src="js/common.js" defer="defer"></script>
-    <script src="js/actsilder.js" defer="defer"></script>
-    <script src="js/nav.js" defer="defer"></script>
+    <script src="js/common.js"></script>
+    <script src="js/actsilder.js"></script>
+    <script src="js/nav.js"></script>
 </body>
 </html>
